--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "next": "13.4.3",
     "nextjs-google-analytics": "^2.3.3",
     "numbro": "^2.4.0",
+    "openai": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
