--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.4",
     "@web3modal/wagmi": "^3.1.0",
     "axios": "^1.5.1",
+    "circomlibjs": "^0.1.7",
     "dayjs": "^1.11.10",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
@@ -40,5 +41,7 @@
     "zustand": "^4.4.3"
   },
   "packageManager": "yarn@3.6.1",
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/circomlibjs": "^0.1.6"
+  }
 }
