--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@noir-lang/backend_barretenberg": "^0.19.2",
     "@noir-lang/noir_js": "^0.19.2",
+    "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
@@ -35,6 +36,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-lottie-player": "^1.5.5",
+    "react-tinder-card": "^1.6.4",
     "typescript": "5.0.4",
     "viem": "^1.19.3",
     "wagmi": "^1.4.3",
