--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "next": "13.4.3",
     "nextjs-google-analytics": "^2.3.3",
+    "node-cache": "^5.1.2",
     "numbro": "^2.4.0",
     "openai": "^4.19.0",
     "react": "18.2.0",
